// Copyright (c) 2024 John Dewey

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to
// deal in the Software without restriction, including without limitation the
// rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
// sell copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
// DEALINGS IN THE SOFTWARE.

syntax = "proto3";

package task;

option go_package = "github.com/retr0h/osapi/internal/task/gen/proto/task";

// ShutdownAction represents an action to reboot or shutdown the system.
message ShutdownAction {
    // The type of action: reboot or shutdown
    enum ActionType {
        REBOOT = 0;
        SHUTDOWN = 1;
    }

    ActionType action_type = 1;

    // Optional field to specify a delay in seconds before reboot/shutdown
    int32 delay_seconds = 2;

    // Optional message to log or display before reboot/shutdown
    string message = 3;
}

// ChangeDNSAction represents an action to change DNS settings.
message ChangeDNSAction {
    // List of DNS server IP addresses (IPv4 or IPv6)
    repeated string dns_servers = 1;

    // List of search domains for DNS resolution
    repeated string search_domains = 2;

    // The name of the network interface to apply DNS settings to
    string interface_name = 3;
}

message Task {
    oneof action {
        ShutdownAction shutdown_action = 1;
        ChangeDNSAction change_dns_action = 2;
    }
}
